Adicionando reestruturação do texto e detalhamentos dos aspectos gerais e metodologia

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,3 +1,10 @@
+@book{metodologia,
+	author    = "E. MORESI",
+    title     = "Metodologia de pesquisa",
+    year      = "2003",
+    publisher = "Universidade Católica de Brasília"
+}
+
 @book{qualidadesoftware,
 	author    = "André Koscianski and Michel dos Santos Soares",
     title     = "Qualidade de Software - Aprenda as metodologias e técnicas mais modernas para o desenvolvimento de software",
