--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -75,11 +75,11 @@ Por objetivos específicos para este trabalho, tem-se:
 \section{Organização do Documento}
 
 \begin{itemize}
-	\item \textbf{Capítulo 2 - Referencial Teórico}: apresenta conceitos e abordagens relacionados ao tema deste trabalho.
+	\item \textbf{Capítulo 2 - Referencial Teórico}: apresenta conceitos e abordagens relacionados ao tema deste trabalho, explicitando as informações obtidas a partir da pesquisa bibliográfica e também, a partir da realização da revisão sistemática.
 
 	\item \textbf{Capítulo 3 - Metodologia}: especifica a metodologia adotada para a pesquisa e desenvolvimento deste trabalho.
 
-	\item \textbf{Capítulo 4 - \textit{Framework} de Avaliação de Código}: apresenta os resultados obtidos a partir da execução da metodologia de pesquisa estabelecida para o desenvolvimento deste trabalho, correlacionando estes ao detalhamento do \textit{framework} proposto.
+	\item \textbf{Capítulo 4 - \textit{Framework} de Avaliação de Código}: apresenta os \textit{checklists} elaborados, correlacionando estes ao detalhamento do \textit{framework} proposto.
 
-	\item \textbf{Capítulo 5 - Atividades Futuras}: descreve como a efetividade do \textit{framework} será avaliada e também, como será feito o cômputo dos resultados.
+	\item \textbf{Capítulo 5 - Atividades Futuras}: descreve como a efetividade do \textit{framework} será avaliada e também, como será feito o cômputo dos resultados. Adicionalmente, tem-se uma breve descrição das instituições que serão utilizadas como caso durante a aplicação do \textit{framework}.
 \end{itemize}
