--- a/editaveis/metodologia.tex
+++ b/editaveis/metodologia.tex
@@ -1,14 +1,25 @@
 \chapter{Metodologia}
 
-Pelo fato de o presente trabalho estar centrado na proposição de um \textit{framework} que reúne práticas propostas pela verificação de \textit{software} e integra estas às diretrizes fornecidas pela VBSE, fez-se necessária a seleção de mais de uma abordagem de pesquisa para a construção do trabalho.
+A metodologia concebida para a realização deste trabalho foi classificada quanto à sua natureza, abordagem e aos procedimentos técnicos.
 
-Primeiramente, é válido notar que a pesquisa bibliográfica foi uma abordagem selecionada. O arcabouço teórico inerente à VBSE e às inspeções de código foi obtido a partir da pesquisa bibliográfica.
+Quanto à natureza, a pesquisa possui uma caracterização aplicada, visto que se objetiva gerar conhecimentos de efeito prático e destinados à resolução de problemas específicos. Quanto à abordagem, a pesquisa possui um enfoque qualitativo, devido ao fato de não requerer a utilização de métodos e técnicas estatísticas \cite{metodologia}.
+
+Para concretizar a realização do trabalho, os seguintes procedimentos técnicos foram adotados:
+
+\begin{itemize}
+	\item Pesquisa Bibliográfica
+	\item Revisão Sistemática
+\end{itemize}
+
+Pelo fato de o presente trabalho estar centrado na proposição de um \textit{framework} que reúne práticas propostas pela verificação de \textit{software} e integra estas às diretrizes fornecidas pela VBSE, fez-se necessária a seleção de mais de um procedimento técnico de pesquisa para a construção do trabalho.
+ 
+O arcabouço teórico inerente à VBSE e às inspeções de código foi obtido a partir da pesquisa bibliográfica.
 
 Para Fonseca (2002), a pesquisa bibliográfica é realizada a partir do levantamento de referências teóricas já analisadas, e publicadas por meios escritos e eletrônicos. A pesquisa bibliográfica possibilita que o pesquisador conheça o que já se estudou sobre a temática.
 
-Como segunda abordagem, a revisão sistemática foi adotada. A revisão sistemática se estabelece como uma metodologia bem definida para identificar, analisar e interpretar as melhores abordagens e práticas relacionadas à uma determinada questão de pesquisa \cite{sistematica}. Além desses aspectos, é uma metodologia que possibilita uma repetição concisa.
+A revisão sistemática, por sua vez, se estabelece como uma metodologia bem definida para identificar, analisar e interpretar as melhores abordagens e práticas relacionadas à uma determinada questão de pesquisa \cite{sistematica}. Além desses aspectos, é uma metodologia que possibilita uma repetição concisa.
 
-A opção por essa metodologia deve-se ao fato de que este trabalho também está voltado para a tentativa de compreender quais tem sido as abordagens empregadas na elaboração de testes unitários e como se tem avaliado a efetividade destes. O \textit{framework}, naturalmente, compreende a prática de elaboração de testes unitários.
+A opção pelo procedimento da revisão sistemática deve-se ao fato de que este trabalho também está voltado para a tentativa de compreender quais tem sido as abordagens empregadas na elaboração de testes unitários e como se tem avaliado a efetividade destes. O \textit{framework}, naturalmente, compreende a prática de elaboração de testes unitários.
 
 Outro aspecto interessante da revisão sistemática é que esta auxilia de maneira precisa na localização dos principais trabalhos publicados para uma determinada problemática, favorecendo a construção de uma linha cronológica que demonstra ao pesquisador quais linhas têm sido defendidas e quais são os campos mais promissores para uma futura exploração.
 
@@ -20,6 +31,16 @@ Neste trabalho, para a execução da revisão sistemática, considerou-se a prop
 	\item Relato da revisão
 \end{itemize}
 
-A fase de planejamento consiste na identificação da necessidade de se desenvolver uma revisão sistemática, bem como elaborar um protocolo de revisão. Logo em seguida, na fase de condução, os objetivos mais pontuais de pesquisa são identificados e, adicionalmente, estudos são selecionados e seus dados são extraídos e analisados. Por fim, na fase de relato, os dados extraídos e analisados na fase anterior são externalisados e elabora-se uma discussão.
+A fase de planejamento consiste na identificação da necessidade de se desenvolver uma revisão sistemática, bem como elaborar um protocolo de revisão. Logo em seguida, na fase de condução, os objetivos mais pontuais de pesquisa são identificados e, adicionalmente, estudos são selecionados e seus dados são extraídos e analisados. Por fim, na fase de relato, os dados extraídos e analisados na fase anterior são externalisados e elabora-se uma discussão. Maiores detalhes acerca da revisão sistemática executada neste trabalho podem ser encontrados no Apêndice A.
 
-Para maiores detalhes acerca da condução da revisão sistemática, o Apêndice A traz notas com relação à tal item.
+\section{Detalhamento do Plano Metodológico}
+
+O plano metodológico concebido para a formulação e aplicação do \textit{framework} aqui proposto se subdivide em duas partes, sendo a primeira atrelada ao TCC 1 (Trabalho de Conclusão de Curso 1) e a segunda, ao TCC 2.
+
+A primeira parte compreende 3 fases: \textit{Planejamento da Pesquisa}; \textit{Coleta de Informações} e \textit{Proposta de Solução}. A figura a seguir ilustra essa parte do plano metodológico.
+
+//INSERIR IMAGEM DA PRIMEIRA PARTE DO PLANO METODOLÓGICO
+
+A segunda parte, já vinculada ao TCC 2, envolve outras 3 fases: \textit{Coleta de Dados}; \textit{Análise e Interpretação dos Resultados} e \textit{Divulgação dos Resultados.} A figura a seguir ilustra a segunda parte do plano metodológico.
+
+//INSERIR IMAGEM DA SEGUNDA PARTE DO PLANO METODOLÓGICO
