--- a/editaveis/atividadesfuturas.tex
+++ b/editaveis/atividadesfuturas.tex
@@ -1,6 +1,6 @@
 \chapter{Atividades Futuras}
 
-Este capítulo apresenta o objetivo de medição bem como um breve detalhamento da estratégia a ser utilizada para aplicar o \textit{framework} em organizações.
+Este capítulo apresenta o objetivo de medição bem como um breve detalhamento da estratégia a ser utilizada para aplicar o \textit{framework} em organizações. Por fim, tem-se uma breve descrição das organizações onde o \textit{framework} será aplicado durante o TCC 2.
 
 \section{Avaliação da Efetividade do \textit{Framework}}
 
@@ -52,7 +52,7 @@ Adicionalmente, para o correto uso do \textit{framework}, propõe-se uma etapa a
 Para verificar o nível de satisfação dos desenvolvedores, concebeu-se uma pequena lista com itens a serem julgados pelos desenvolvedores de acordo com as opções disponíveis, citadas como componentes da métrica que responde à questão 4. A seguir, tem-se os itens de pesquisa.
 
 \begin{itemize}
-	\item As inspeções de código se mostraram extremamente eficazes na identificação de defeitos no código.
+	\item As inspeções de código se mostraram eficazes na identificação de defeitos no código.
 
 	\item Os testes unitários implementados de acordo com o guia, de fato, exercitam o código de maneira eficiente.
 
@@ -71,4 +71,22 @@ Antes da incorporação das atividades propostas pelo \textit{framework} à roti
 
 Adicionalmente, será construída uma página na wiki ou até mesmo uma simples página web nos ambientes dos projetos que irá dispor a imagem do processo que constitui o \textit{framework}, bem como o detalhamento deste, de forma que os \textit{stakeholders} dos projetos possam efetuar consultas em caso de dúvidas.
 
-A pesquisa-ação será a metodologia empregada para analisar o uso do \textit{framework}. Essa metodologia possibilita que o pesquisador intervenha dentro da problemática, mobilizando os participantes e construindo novos conhecimentos \cite{pesquisa}. Assim, a cada ciclo novos quesitos poderão ser melhor tratados no \textit{framework}.
+A pesquisa-ação será o procedimento técnico empregado para analisar o uso do \textit{framework}. Esse procedimento possibilita que o pesquisador intervenha dentro da problemática, mobilizando os participantes e construindo novos conhecimentos \cite{pesquisa}. Assim, a cada ciclo novos quesitos poderão ser melhor tratados no \textit{framework}.
+
+\section{Organizações onde o \textit{Framework} será aplicado}
+
+\subsection{Controladoria Geral do Distrito Federal}
+
+A Controladoria Geral do Distrito Federal teve sua estrutura criada por meio do Decreto nº 36.236, de 1º de janeiro de 2015, pelo Governador Rodrigo Rollemberg. Esta Unidade Gestora possui como missão orientar e controlar a gestão pública, com transparência e participação da sociedade.
+
+Interno à Controladoria, há uma coordenação de assuntos tecnológicos, a COTEC, que é responsável por desenvolver e manter sistemas para todas as demais coordenações da Controladoria. Além dos sistemas internos, tem-se aplicações que são desenvolvidas por empresas privadas ao governo e entregues à COTEC para serem mantidas.
+
+A equipe da COTEC é pequena, contando com um total de 10 servidores. São 3 servidores na frente de infraestrutura, 3 na frente de administração de banco de dados e apenas 4 na área de desenvolvimento. O \textit{Scrum} e XP foram adotados recentemente na COTEC.
+
+A maior parte dos sistemas desenvolvidos e mantidos pela COTEC são aplicações \textit{Web}, construídas com as linguagens de programação \textit{CSharp} e Java. Adicionalmente, faz-se uso do \textit{framework} \textit{AngularJS} para elaboração da camada de apresentação das aplicações.
+
+Embora já se tenha o mínimo de atividades para controlar o desenvolvimento, a COTEC ainda necessita incorporar uma série de outras práticas. As atividades inerentes à verificação de \textit{software} ainda são incipientes na COTEC, tornando-a um local propício para a aplicação do \textit{framework}.
+
+\subsection{Laboratório Fábrica de \textit{Software} - Campus UnB Gama}
+
+O Laboratório Fábrica de \textit{Software} foi concebido com fins de pesquisa e promoção de excelência no desenvolvimento de \textit{software}. Atualmente, o laboratório já incorpora metodologias ágeis para o desenvolvimento, sendo o \textit{Scrum} e o XP. Adicionalmente, possui enfoque no desenvolvimento de aplicações \textit{mobile}, mais especificamente para a plataforma \textit{Android}, e aplicações \textit{Web}, em linguagem \textit{CSharp}.
