Adicionando refinamentos no texto e reestruturações

--- a/editaveis/agradecimentos.tex
+++ b/editaveis/agradecimentos.tex
@@ -1,4 +1,7 @@
 \begin{agradecimentos}
-Agradecimentos.
+
+Primeiramente, gostaria de agradecer à Deus por tudo que Ele me possibilitou viver, chegando até este momento. Em segundo lugar, gostaria de agradecer aos meus pais, Célio Ferraz e Aurenice Ferraz, e irmão, Daniel Ferraz, que sempre me apoioram, não somente durante minha jornada de graduação, mas também, durante toda a vida.
+
+Agradeço à professora Elaine, que com paciência e sabedoria, se colocou à disposição para me auxiliar a concluir este trabalho. Por fim, gostaria de agradecer à todos os professores que fizeram parte da minha graduação, pois, sem dúvida alguma, todos contribuíram para o aperfeiçoamento da minha visão intelectual e profissional.
 
 \end{agradecimentos}
