--- a/editaveis/apendices.tex
+++ b/editaveis/apendices.tex
@@ -4,6 +4,61 @@
 
 \chapter{Detalhamento da Revisão Sistemática}
 
-Texto do primeiro apêndice.
+Este apêndice tem por objetivo detalhar como a revisão sistemática foi conduzida para obter informações acerca da implementação de testes unitários.
+
+\section{Questões de Pesquisa}
+
+Para a revisão sistemática, as seguintes questões de pesquisa foram concebidas:
+
+\begin{itemize}
+	\item \textbf{Questão de Pesquisa 1:} Quais tem sido as abordagens empregadas para elaboração de testes unitários de qualidade?
+	\item \textbf{Questão de Pesquisa 2:} Como se tem avaliado a qualidade dos testes unitários?
+\end{itemize}
+
+Para verificar a qualidade dos testes unitários implementados é necessário coletar e compreender as principais abordagens utilizadas na prática e que, por sua vez, se mostraram efetivas na tarefa de construção de testes unitários.
+
+Nesta revisão sistemática, buscou-se, em primeiro lugar, identificar as abordagens empregadas na elaboração de testes unitários de qualidade. Como segundo aspecto, procurou-se verificar como se tem avaliado a qualidade dos testes unitários.
+
+\section{Protocolo de Revisão}
+
+As buscas foram feitas nas seguintes bibliotecas digitais:
+
+\begin{itemize}
+	\item IEEE \textit{Xplore Digital Library}
+	\item ACM \textit{Digital Library}
+	\item \textit{ScienceDirect}
+	\item Biblioteca Digital Brasileira de Computação
+\end{itemize}
+
+Inicialmente, procurou-se definir uma string para a busca nas bases. Após três ciclos de refinamento, a string final estabelecida foi \textit{Quality of unit tests \textbf{AND} unit test coverage \textbf{OR} unit test adequacy}.
+
+A string de busca foi refinada conforme artigos que condiziam com a problemática eram encontrados e assim, suas palavras-chave eram utilizadas. É importante ressaltar que na base brasileira a mesma string foi utilizada, contudo, traduzida para a língua portuguesa.
+
+Com relação à seleção dos artigos, os seguintes critérios foram estabelecidos:
+
+\begin{itemize}
+	\item Artigos escritos em língua inglesa ou portuguesa.
+	\item Artigos que contemplassem um relato de experiência da indústria, elencando práticas e técnicas, bem como uso de ferramentas.
+\end{itemize}
+
+Para a análise dos dados, os seguintes passos foram definidos:
+
+\begin{itemize}
+	\item \textbf{Primeiro:} Extração das abordagens relatadas
+	\item \textbf{Segundo:} Classificação das abordagens quanto à sua natureza
+\end{itemize}
+
+\section{Condução da Revisão}
+
+Durante as buscas iniciais nas bases citadas, foram encontrados muitos artigos que
+retratavam testes unitários, mas não especificamente o quesito qualidade dos mesmos. Após
+inserção do termo \textit{“unit test coverage”}, foi possível encontrar 2 (dois) artigos que
+abordavam o quesito qualidade dos testes unitários como aspecto central.
+
+A partir destes artigos, o termo \textit{“unit test adequacy”} foi inserido e assim, outros
+artigos que também tratavam do quesito qualidade de testes unitários foram encontrados.
+Levando em consideração as bases citadas anteriormente, a busca retornou um total de 65
+(sessenta e cinco) artigos. Ao final do processo de busca e seleção, 8 (oito) artigos foram
+selecionados.
 
 \end{apendicesenv}
