--- a/editaveis/atividadesfuturas.tex
+++ b/editaveis/atividadesfuturas.tex
@@ -71,15 +71,15 @@ Antes da incorporação das atividades propostas pelo \textit{framework} à roti
 
 Adicionalmente, será construída uma página na wiki ou até mesmo uma simples página web nos ambientes dos projetos que irá dispor a imagem do processo que constitui o \textit{framework}, bem como o detalhamento deste, de forma que os \textit{stakeholders} dos projetos possam efetuar consultas em caso de dúvidas.
 
-A pesquisa-ação será o procedimento técnico empregado para analisar o uso do \textit{framework}. Esse procedimento possibilita que o pesquisador intervenha dentro da problemática, mobilizando os participantes e construindo novos conhecimentos \cite{pesquisa}. Assim, a cada ciclo novos quesitos poderão ser melhor tratados no \textit{framework}.
+Como mencionado no capítulo inerente à metodologia, a pesquisa-ação será o procedimento técnico empregado para analisar o uso do \textit{framework}.
 
 \section{Organizações onde o \textit{Framework} será aplicado}
 
 \subsection{Controladoria Geral do Distrito Federal}
 
-A Controladoria Geral do Distrito Federal teve sua estrutura criada por meio do Decreto nº 36.236, de 1º de janeiro de 2015, pelo Governador Rodrigo Rollemberg. Esta Unidade Gestora possui como missão orientar e controlar a gestão pública, com transparência e participação da sociedade.
+A Controladoria Geral do Distrito Federal (CGDF) teve sua estrutura criada por meio do Decreto nº 36.236, de 1º de janeiro de 2015, pelo Governador Rodrigo Rollemberg. Esta Unidade Gestora possui como missão orientar e controlar a gestão pública, com transparência e participação da sociedade.
 
-Interno à Controladoria, há uma coordenação de assuntos tecnológicos, a COTEC, que é responsável por desenvolver e manter sistemas para todas as demais coordenações da Controladoria. Além dos sistemas internos, tem-se aplicações que são desenvolvidas por empresas privadas ao governo e entregues à COTEC para serem mantidas.
+Interna à CGDF, há uma coordenação de assuntos tecnológicos, a COTEC, que é responsável por desenvolver e manter sistemas para todas as demais coordenações da CGDF. Além dos sistemas internos, tem-se aplicações que são desenvolvidas por empresas privadas ao governo e entregues à COTEC para serem mantidas.
 
 A equipe da COTEC é pequena, contando com um total de 10 servidores. São 3 servidores na frente de infraestrutura, 3 na frente de administração de banco de dados e apenas 4 na área de desenvolvimento. O \textit{Scrum} e XP foram adotados recentemente na COTEC.
 
@@ -89,4 +89,10 @@ Embora já se tenha o mínimo de atividades para controlar o desenvolvimento, a 
 
 \subsection{Laboratório Fábrica de \textit{Software} - Campus UnB Gama}
 
-O Laboratório Fábrica de \textit{Software} foi concebido com fins de pesquisa e promoção de excelência no desenvolvimento de \textit{software}. Atualmente, o laboratório já incorpora metodologias ágeis para o desenvolvimento, sendo o \textit{Scrum} e o XP. Adicionalmente, possui enfoque no desenvolvimento de aplicações \textit{mobile}, mais especificamente para a plataforma \textit{Android}, e aplicações \textit{Web}, em linguagem \textit{CSharp}.
+O Laboratório Fábrica de \textit{Software} foi concebido com fins de pesquisa e promoção de excelência no desenvolvimento de \textit{software}. Atualmente, o laboratório já incorpora metodologias ágeis para o desenvolvimento, sendo o \textit{Scrum} e o XP (\textit{Extreme Programming}).
+
+Adicionalmente, o laboratório atua de forma a unir o aprendizado das disciplinas do curso de Engenharia de \textit{Software} do Campus Gama da UnB, e a atuação prática de projetos reais.
+
+O laboratório possui parceria com instituições públicas e privadas, as quais subsidiam pesquisas e projetos utilizando tecnologia \textit{CSharp} e \textit{Android}. Quando necessário, o laboratório também modela processos de negócio utilizando notação BPMN (\textit{Business Process Model and Notation}).
+
+Por se tratar de uma instituição aberta ao âmbito de pesquisa na área de Engenharia de \textit{Software}, o laboratório é um local apropriado para uso e experimentação do \textit{framework}, justamente pelo fato de conciliar interesses práticos do mercado com os fins acadêmicos.
