--- a/editaveis/metodologia.tex
+++ b/editaveis/metodologia.tex
@@ -37,10 +37,29 @@ A fase de planejamento consiste na identificação da necessidade de se desenvol
 
 O plano metodológico concebido para a formulação e aplicação do \textit{framework} aqui proposto se subdivide em duas partes, sendo a primeira atrelada ao TCC 1 (Trabalho de Conclusão de Curso 1) e a segunda, ao TCC 2.
 
-A primeira parte compreende 3 fases: \textit{Planejamento da Pesquisa}; \textit{Coleta de Informações} e \textit{Proposta de Solução}. A figura a seguir ilustra essa parte do plano metodológico.
+A primeira parte compreende 3 fases: \textit{Planejamento da Pesquisa}; \textit{Coleta de Informações} e \textit{Proposta de Solução}.
 
-//INSERIR IMAGEM DA PRIMEIRA PARTE DO PLANO METODOLÓGICO
+A fase inerente ao \textit{Planejamento da Pesquisa} envolve a definição de objetivos, pergunta de pesquisa, classificação metodológica e estabelecimento dos procedimentos técnicos de pesquisa. É válido evidenciar que essas definições são realizadas a partir do problema que foi identificado.
 
-A segunda parte, já vinculada ao TCC 2, envolve outras 3 fases: \textit{Coleta de Dados}; \textit{Análise e Interpretação dos Resultados} e \textit{Divulgação dos Resultados.} A figura a seguir ilustra a segunda parte do plano metodológico.
+A fase de \textit{Coleta de Informações} compreende a aplicação dos procedimentos técnicos adotados para a pesquisa, que para este trabalho foram a pesquisa bibliográfica e a revisão sistemática.
 
-//INSERIR IMAGEM DA SEGUNDA PARTE DO PLANO METODOLÓGICO
+Por fim, na fase \textit{Proposta de Solução}, há a concepção de uma possível solução para a problemática identificada. Esta solução, por sua vez, está embasada nas informações coletadas na fase anterior.
+
+A figura a seguir ilustra essa parte do plano metodológico.
+
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{figuras/planometodologico1.png}
+\caption{Plano Metodológico - TCC 1}
+\end{figure}
+
+A segunda parte, já vinculada ao TCC 2, envolve outras 3 fases: \textit{Coleta de Dados}; \textit{Análise e Interpretação dos Resultados} e \textit{Divulgação dos Resultados.}.
+A fase \textit{Coleta de Dados} envolve a aplicação de um procedimento técnico denominado pesquisa-ação. Esse procedimento possibilita que o pesquisador intervenha dentro da problemática, mobilizando os participantes e construindo novos conhecimentos \cite{pesquisa}. Assim, a cada ciclo novos quesitos poderão ser melhor tratados no \textit{framework}.
+
+Na fase \textit{Análise e Interpretação dos Resultados}, todos os dados coletados a partir da utilização do \textit{framework} serão analisados, de forma que todas as percepções possíveis possam ser obtidas. Por fim, na fase \textit{Divulgação dos Resultados}, haverá uma estruturação de todos os dados obtidos e analisados, de forma que possa ser evidenciado a efetividade do uso do \textit{framework}.
+
+A figura a seguir ilustra a segunda parte do plano metodológico.
+
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{figuras/planometodologico2.png}
+\caption{Plano Metodológico - TCC 2}
+\end{figure}
